updaten bibliografie en updaten stijl

--- a/paper/bibliografie.bib
+++ b/paper/bibliografie.bib
@@ -8,6 +8,7 @@
   publisher    = {John Wiley & Sons},
   url          = {https://www.ebook.de/de/product/6597146/remus_teodorescu_marco_liserre_pedro_rodriguez_grid_converters_for_photovoltaic_and_wind_power_systems.html},
   volume       = {82},
+  file         = {:Teodorescu2011.pdf:PDF},
   journaltitle = {Renewable and Sustainable Energy Reviews},
 }
 
@@ -18,11 +19,13 @@
   title        = {A{\textendash}Z survey of Internet of Things: Architectures, protocols, applications, recent advances, future directions and recommendations},
   doi          = {10.1016/j.jnca.2020.102663},
   editor       = {Subhas Chandra Mukhopadhyay},
+  issn         = {1084-8045},
   pages        = {102663},
   url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
   volume       = {163},
+  file         = {:Kassab2020.pdf:PDF},
   isbn         = {1587144565},
-  publisher    = {CISCO},
+  publisher    = {Elsevier {BV}},
 }
 
 @Article{Gubbi2013,
@@ -36,8 +39,9 @@
   pages        = {1645--1660},
   url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
   volume       = {29},
+  file         = {:Gubbi2013.pdf:PDF},
   isbn         = {1587144565},
-  publisher    = {CISCO},
+  publisher    = {Elsevier {BV}},
 }
 
 @Article{Shafique2020,
@@ -51,8 +55,9 @@
   pages        = {23022--23040},
   url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
   volume       = {8},
+  file         = {:Shafique2020.pdf:PDF},
   isbn         = {1587144565},
-  publisher    = {CISCO},
+  publisher    = {Institute of Electrical and Electronics Engineers ({IEEE})},
 }
 
 @Article{Wortmann2015,
@@ -66,8 +71,9 @@
   pages        = {221--224},
   url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
   volume       = {57},
+  file         = {:Wortmann2015.pdf:PDF},
   isbn         = {1587144565},
-  publisher    = {CISCO},
+  publisher    = {Springer Science and Business Media {LLC}},
 }
 
 @Article{Choi2021,
@@ -81,8 +87,9 @@
   pages        = {126908},
   url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
   volume       = {301},
+  file         = {:Choi2021.pdf:PDF},
   isbn         = {1587144565},
-  publisher    = {CISCO},
+  publisher    = {Elsevier {BV}},
 }
 
 @InCollection{Kramp2013,
@@ -98,6 +105,7 @@
   publisher    = {Springer Berlin Heidelberg},
   url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
   volume       = {301},
+  file         = {:Kramp2013.pdf:PDF},
   journaltitle = {Journal of Cleaner Production},
 }
 
@@ -113,8 +121,9 @@
   url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
   volume       = {9},
   booktitle    = {Enabling Things to Talk},
+  file         = {:Setz2021.pdf:PDF},
   isbn         = {1587144565},
-  publisher    = {Apress},
+  publisher    = {Institute of Electrical and Electronics Engineers ({IEEE})},
 }
 
 @Article{Sowah2020,
@@ -123,14 +132,15 @@
   journaltitle = {Journal of Sensors},
   title        = {Design of a Secure Wireless Home Automation System with an Open Home Automation Bus ({OpenHAB} 2) Framework},
   doi          = {10.1155/2020/8868602},
-  editor       = {Subhas Chandra Mukhopadhyay},
+  editor       = {Rafael Morales},
   number       = {10},
   pages        = {1--22},
   url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
   volume       = {2020},
   booktitle    = {Enabling Things to Talk},
+  file         = {:Sowah2020.pdf:PDF},
   isbn         = {1587144565},
-  publisher    = {Apress},
+  publisher    = {Hindawi Limited},
 }
 
 @Book{Jain2021,
@@ -146,6 +156,7 @@
   url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
   volume       = {2020},
   booktitle    = {2019 {IEEE} International Conference on Internet of Things and Intelligence System ({IoTaIS})},
+  file         = {:Jain2021.pdf:PDF},
   journaltitle = {Journal of Sensors},
 }
 
@@ -161,8 +172,9 @@
   url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
   volume       = {9},
   booktitle    = {2019 {IEEE} International Conference on Internet of Things and Intelligence System ({IoTaIS})},
+  file         = {:Kouro2015.pdf:PDF},
   isbn         = {1587144565},
-  publisher    = {Springer International Publishing},
+  publisher    = {Institute of Electrical and Electronics Engineers ({IEEE})},
 }
 
 @Article{Ashton2009,
@@ -173,14 +185,16 @@
   number       = {7},
   pages        = {97-114},
   volume       = {22},
+  file         = {:Ashton2009.pdf:PDF},
 }
 
-@Misc{Shurtleff2014,
-  author = {Shurtleff, Mike},
-  date   = {2014-07-22},
-  editor = {Clean Technica},
-  title  = {The Continuing Exponential Growth Of Global Solar PV Production & Installation},
-  url    = {https://cleantechnica.com/2014/07/22/exponential-growth-global-solar-pv-production-installation/},
+@WWW{Shurtleff2014,
+  author  = {Shurtleff, Mike},
+  date    = {2014-07-22},
+  editor  = {Clean Technica},
+  title   = {The Continuing Exponential Growth Of Global Solar PV Production & Installation},
+  url     = {https://cleantechnica.com/2014/07/22/exponential-growth-global-solar-pv-production-installation/},
+  urldate = {2022-04-08},
 }
 
 @Article{Vijayapriya2011,
@@ -192,14 +206,16 @@
   number       = {04},
   pages        = {305--311},
   volume       = {02},
+  file         = {:Vijayapriya2011.pdf:PDF},
   publisher    = {Scientific Research Publishing, Inc.},
 }
 
 @Report{IPCC2022,
-  author      = {P.R. Shukla and J. Skea and R. Slade and A. Al Khourdajie and R. van Diemen and D. McCollum and M. Pathak and S. Some and P. Vyas and R. Fradera and M. Belkacemi and A. Hasija and G. Lisboa and S. Luz and J. Malley, (eds.)},
   institution = {Cambridge University Press, Cambridge, UK and New York, NY, USA.},
   title       = {IPCC, 2022: Climate Change 2022: Mitigation of Climate Change. Contribution of Working Group III to the Sixth Assessment Report of the Intergovernmental Panel on Climate Change},
   doi         = {10.1017/9781009157926},
+  editor      = {P.R. Shukla and J. Skea and R. Slade and A. Al Khourdajie and R. van Diemen and D. McCollum and M. Pathak and S. Some and P. Vyas and R. Fradera and M. Belkacemi and A. Hasija and G. Lisboa and S. Luz and J. Malley},
+  file        = {:IPCC2022.pdf:PDF},
 }
 
 @Article{KouveliotisLysikatos2022,
@@ -211,6 +227,7 @@
   number       = {1},
   pages        = {1--11},
   volume       = {10},
+  file         = {:KouveliotisLysikatos2022.pdf:PDF},
   publisher    = {Journal of Modern Power Systems and Clean Energy},
 }
 
@@ -222,23 +239,29 @@
   doi          = {10.1109/access.2022.3152528},
   pages        = {24316--24326},
   volume       = {10},
+  file         = {:Patel2022.pdf:PDF},
   publisher    = {Institute of Electrical and Electronics Engineers ({IEEE})},
 }
 
-@WWW{Fusionsolar2021,
-  author = {Huawei},
-  date   = {2021-12-23},
-  title  = {FusionSolar Smart PV Management System Connection User Manual (Inverters + SDongleA)},
-  url    = {https://support.huawei.com/enterprise/en/doc/EDOC1100173984?idPath=9452479|21439560|7921563|21102414|21571652},
+@Manual{Fusionsolar2021,
+  author      = {Huawei},
+  date        = {2021-12-23},
+  title       = {FusionSolar Smart PV Management System Connection User Manual (Inverters + SDongleA)},
+  url         = {https://support.huawei.com/enterprise/en/doc/EDOC1100173984?idPath=9452479|21439560|7921563|21102414|21571652},
+  file        = {:Fusionsolar2021.pdf:PDF},
+  institution = {Huawei},
 }
 
-@InBook{Domb2019,
+@InCollection{Domb2019,
   author    = {Domb, Menachem},
-  booktitle = {IoT and Smart Home Automation},
+  booktitle = {{IoT} and Smart Home Automation [Working Title]},
   date      = {2019-11-27},
-  title     = {Smart home systems based on Internet ofThings},
+  title     = {Smart Home Systems Based on Internet of Things},
+  doi       = {10.5772/intechopen.84894},
   editor    = {Yasser Ismail},
   isbn      = {978-1-78984-096-4},
+  publisher = {{IntechOpen}},
+  file      = {:Domb2019.pdf:PDF},
 }
 
 @InProceedings{Maksimovic2014,
@@ -246,13 +269,15 @@
   booktitle = {Proceedings of 1st International Conference on Electrical, Electronic and Computing EngineeringIcETRAN 2014},
   date      = {2014-06-02},
   title     = {Raspberry Pi as Internet of Things hardware:Performances and Constraints},
+  file      = {:Maksimovic2014.pdf:PDF},
 }
 
-@WWW{SUN2000L2022,
+@Manual{SUN2000L2022,
   author = {Huawei},
   date   = {2022-03-09},
   title  = {SUN2000-(2KTL-6KTL)-L1 Gebruikershandleiding},
   url    = {https://support.huawei.com/enterprise/en/doc/EDOC1100149276?idPath=9452479|21439560|7921563|21102413|22027611},
+  file   = {:SUN2000L2022.pdf:PDF},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
