--- a/paper/DePaepeBart2022RM.tex
+++ b/paper/DePaepeBart2022RM.tex
@@ -89,9 +89,13 @@
     
     % TODO: (fase 2) introduceer je gekozen onderwerp, formuleer de onderzoeksvraag en deelvragen. Wat is de doelstelling (is die S.M.A.R.T.?), wat zal het resultaat zijn van het onderzoek (een Proof-of-Concept, een prototype, een advies, ...)? Waarom is het nuttig om dit onderwerp te onderzoeken?
     Vandaag beschikken meer en meer gebouwen over een zonnepaneleninstallatie. Dergelijke installatie wekt stroom op die enerzijds zelf verbruikt kan worden en anderzijds op het stroomnet geïnjecteerd kan worden. Individueel bieden deze installaties reeds een grote waarde zowel aan een gebruiker als aan de maatschappij door het opwekken van groene stroom. Maar daar bovenop is het mogelijk om nog meer specifieke meerwaarde te genereren door deze installaties slim te maken en ze te verbinden met het Internet of Things (IoT).
+    
     De connectie van een fotovoltaïsche installatie met het IoT vormt het onderwerp van dit onderzoek. We bouwen zelf een geäutomatiseerd systeem dat de opbrengst van een installatie uitleest en opslaat. Een gebruiker moet deze gegevens kunnen bekijken a.d.h.v. een app op de smartphone. Voor deze opdracht beperken we ons tot een specifieke Proof-of-Concept (POC).
+    
     Het IoT is de volgende (of reeds de huidige) hype in onze digitale wereld. Na de golf van de sociale netwerken en het internet dat daarmee geïntroduceerd werd, is het nu tijd voor ubiquitous internet. Alle elektrische toestellen worden verbonden met het internet, interageren met elkaar, leren daaruit, en passen hun functionaliteit daar naar aan teneinde een optimale dienstverlening voor de eindgebruiker te bieden.
+    
     Onze energievoorziening is ongelofelijk actueel. We moeten af van de fossiele brandstoffen en omschakelen naar schone energie via de groene transitie. Deze ambitie tergelijk met een steeds toenemende vraag naar energie, zorgt ervoor dat deze opgave uitermate complex is. Eén van de puzzelstukken in het energievraagstuk is zonneënergie. Het verdient daarom zeker alle aandacht om het aandeel van stroom opgewekt door zonnepanelen zo efficiënt mogelijk te beheren.
+    
     Het doel van dit onderzoek is om een geautomatiseerd systeem te ontwikkelen dat de opbrengstgegevens van een fotovoltaïsche installatie uitleest en opslaat. Deze gegevens kunnen via een app op de smartphone bekeken worden. Voor de POC gebruiken we een Huawei omvormer SUN2000, Rasperry Pi microcontroller, en open-HAB beheersysteem.
     
     \section{Overzicht literatuur}
@@ -104,6 +108,7 @@
     We halen 2 aspecten aan om de onderzoeksvraag te motiveren.
     
     Ten eerste groeit het aandeel van energie uit fotovoltaïsche cellen jaarlijks \autocite{Shurtleff2014}. Zonneënergie vormt daarom een belangrijke bijdrage aan de energiemix. De dalende prijzen van de fotovoltaïsche installaties, de zoektocht naar groene energie, het maatschappelijk draagvlak en de overheidspremies zijn allemaal elementen die de overstap naar zonneënergie versnellen \autocite{Kouro2015}.
+    
     Ten tweede is er de behoefte om al die zonnepaneleninstallaties met elkaar te verbinden. Dit zal ons in staat stellen om de energiebehoefte beter in kaart te brengen met als doel het ontwikkelen van een smart grid. \textcite{Vijayapriya2011} definieert het smart grid als een eigen afdeling binnen het IoT met als doelstelling:
     \begin{itemize}
         \item een zelflerend systeem door en voor de gebruikers
@@ -152,14 +157,16 @@
     % TODO: (fase 5) beschrijf in detail in welke fasen je onderzoek uiteenvalt, hoe lang elke fase duurt en wat het concrete resultaat van elke fase is. Welke onderzoekstechniek ga je toepassen om elk van je onderzoeksvragen te beantwoorden? Gebruik je hiervoor experimenten, vragenlijsten, simulaties? Je beschrijft ook al welke tools je denkt hiervoor te gebruiken of te ontwikkelen.
     
     Ons onderzoek wordt opgesplitst in 5 afzonderlijke fases:
-    \begin{itemize}
+    \begin{enumerate}
         \item Verbinding maken met de omvormer over het lokaal netwerk.
         \item Opzetten van een centraal beheersysteem.
         \item De omvormer aanspreken via het centraal beheersysteem.
         \item Ontwikkelen van een mobiele applicatie die communiceert met het centraal beheersysteem.
         \item Opvragen van de gegevens van de omvormer aan het centraal beheersysteem via de mobiele applicatie.
-    \end{itemize}
+    \end{enumerate}
     Deze verschillende fases moeten achtereenvolgend, sequentieel doorlopen worden, aangezien ze voortbouwen op het resultaat van de voorgaande fase. De complexiteit van het werk neemt toe bij elke fase, met als eindresultaat bij de laatste fase een geïntegreerd werkend systeem dat aantoont dat de onderzoeksvraag opgelost kan worden.
+    
+    Achtereenvolgend wordt er nu dieper ingegaan op de verschillende fases. In de context van deze paper die als doel heeft om een onderzoeksvoorstel te definiëren, wordt nog niet te diep ingegaan op alle uit te voeren stappen. Het is eerder de bedoeling om de richting aan te geven waarin het werk zich zal verdiepen. Een uitvoerige beschrijving van alle taken zal aan bod komen in de bachelorproef.
     
     De eerste fase legt zich toe op het maken van een verbinding met de omvormer over het lokaal netwerk. We gebruiken een Huawei SUN2000 uitgebreid met een Smart Dongle voor wireless of fixed communicatie tussen de omvormer en het beheersysteem. De communicatie gebeurt adhv. het Modbus TCP protocol. Het doel van deze fase is om op vraag van de gebruiker een connectie te maken met de omvormer en gegevens op te vragen. Als eindresultaat van deze fase verwachten we een script dat connecteert met de omvormer adhv. Modbus TCP en de energiegevens van de omvormer uitprint.
     
