--- a/paper/bibliografie.bib
+++ b/paper/bibliografie.bib
@@ -247,7 +247,7 @@
   author      = {Huawei},
   date        = {2021-12-23},
   title       = {FusionSolar Smart PV Management System Connection User Manual (Inverters + SDongleA)},
-  url         = {https://support.huawei.com/enterprise/en/doc/EDOC1100173984?idPath=9452479|21439560|7921563|21102414|21571652},
+  url         = {https://support.huawei.com/enterprise/en/doc/EDOC1100173984},
   file        = {:Fusionsolar2021.pdf:PDF},
   institution = {Huawei},
 }
@@ -276,7 +276,7 @@
   author = {Huawei},
   date   = {2022-03-09},
   title  = {SUN2000-(2KTL-6KTL)-L1 Gebruikershandleiding},
-  url    = {https://support.huawei.com/enterprise/en/doc/EDOC1100149276?idPath=9452479|21439560|7921563|21102413|22027611},
+  url    = {https://support.huawei.com/enterprise/en/doc/EDOC1100149276},
   file   = {:SUN2000L2022.pdf:PDF},
 }
 
