--- a/paper/DePaepeBart2022RM.tex
+++ b/paper/DePaepeBart2022RM.tex
@@ -45,9 +45,11 @@
 %---------- Abstract ----------------------------------------------------------
 
 \Abstract{% TODO: (fase 6)
-    Hier schrijf je de samenvatting van je artikel, als een doorlopende tekst van één paragraaf.
+    Deze paper onderzoekt hoe een systeem kan ontwikkeld worden dat de opbrengstgegevens van een zonnepaneleninstallatie uitleest en hoe dit past binnen verschillende concepten van het Internet of Things (IoT). De problematiek is zeer actueel, ten eerste omwille van de energietransitie waarmee onze maatschappij geconfronteerd wordt, en ten tweede door de technologische vooruitgang van al onze gebruiksvoorwerpen in de context van het IoT.
     
-    Bij de sleutelwoorden geef je het onderzoeksdomein (= specialisatierichting in de opleiding), samen met andere sleutelwoorden die je werk beschrijven.
+    Aan de hand van een Proof-of-Concept (POC) wordt een systeem gebouwd dat de opgewekte energie van een Huawei omvormer SUN2000 uitleest en opslaat. Overeenkomstig de architectuur die gehanteerd wordt bij gelijkaardige systemen van het IoT, fungeert een beheersysteem geïnstalleerd op een microcontroller als centraal aanspreekpunt voor het device (de omvormer) en de applicatie. Binnen de POC integreren we een mobiele applicatie die toelaat om de energiegegevens te raadplegen. Het gebruik van een centraal beheersysteem wordt algemeen toegepast binnen verschillende technologieën van het IoT. Daarom verwachten we dat de vooropgestelde architectuur met gebruik van een centraal beheersysteem dat verbonden is met de omvormer enerzijds en met de applicatie anderzijds, ook zal toelaten om de gegevens van de omvormer uit te lezen en weer te geven in een applicatie.
+    
+    Het ontwikkelen van deze slimme component die past binnen het IoT zal de maatschappij in staat stellen om in de toekomst efficiënter om te gaan met onze energievoorziening. Vooruitgang op dat vlak is noodzakelijk in het kader van de energietransitie en in het kader van de alsmaar toenemende vraag naar energie.
 }
 
 %---------- Onderzoeksdomein en sleutelwoorden --------------------------------
@@ -69,7 +71,7 @@
 %
 % De andere sleutelwoorden zijn vrij te kiezen.
 
-\Keywords{Onderzoeksdomein; Applicatieontwikkeling (andere); automatisering; zonnepanelen}
+\Keywords{Onderzoeksdomein; Applicatieontwikkeling (andere); Internet of Things; zonnepanelen}
 \newcommand{\keywordname}{Sleutelwoorden} % Defines the keywords heading name
 
 %---------- Titel, inhoud -----------------------------------------------------
@@ -94,7 +96,7 @@
     
     Het IoT is de volgende (of reeds de huidige) hype in onze digitale wereld. Na de golf van de sociale netwerken en het internet dat daarmee geïntroduceerd werd, is het nu tijd voor ubiquitous internet. Alle elektrische toestellen worden verbonden met het internet, interageren met elkaar, leren daaruit, en passen hun functionaliteit daar naar aan teneinde een optimale dienstverlening voor de eindgebruiker te bieden.
     
-    Onze energievoorziening is ongelofelijk actueel. We moeten af van de fossiele brandstoffen en omschakelen naar schone energie via de groene transitie. Deze ambitie tergelijk met een steeds toenemende vraag naar energie, zorgt ervoor dat deze opgave uitermate complex is. Eén van de puzzelstukken in het energievraagstuk is zonneënergie. Het verdient daarom zeker alle aandacht om het aandeel van stroom opgewekt door zonnepanelen zo efficiënt mogelijk te beheren.
+    Onze energievoorziening is ongelofelijk actueel. We moeten af van de fossiele brandstoffen en omschakelen naar schone energie via de groene transitie. Deze ambitie tegelijk met een steeds toenemende vraag naar energie, zorgt ervoor dat deze opgave uitermate complex is. Eén van de puzzelstukken in het energievraagstuk is zonneënergie. Het verdient daarom zeker alle aandacht om het aandeel van stroom opgewekt door zonnepanelen zo efficiënt mogelijk te beheren.
     
     Het doel van dit onderzoek is om een geautomatiseerd systeem te ontwikkelen dat de opbrengstgegevens van een fotovoltaïsche installatie uitleest en opslaat. Deze gegevens kunnen via een app op de smartphone bekeken worden. Voor de POC gebruiken we een Huawei omvormer SUN2000, Rasperry Pi microcontroller, en open-HAB beheersysteem.
     
@@ -121,7 +123,7 @@
     
     Het \textcite{IPCC2022} rapport stelt dat om de globale klimaatopwarming te beperken, er grote wijzigingen in de energiesector zullen moeten plaatsvinden. In de eerste plaats moet het gebruik van fossiele brandstof omlaag, ook moeten zoveel mogelijk eindverbruikers toegang krijgen tot elektriciteit. De efficiëntie van de energievraag moet geöptimaliseerd worden en er moet overgeschakeld worden op alternatieve brandstoffen (zoals waterstof).
     
-    Om aan deze stijgende elektriciteitsvraag te voldoen, wordt het smart grid een essentiële technologie \autocite{Patel2022}. Het is een verbeterde versie van het traditionele grid dat communicatie van stroom en data in de 2 richtingen toelaat. De grote uitdaging ligt in het vinden van het evenwicht tussen productie en consumptie en vormt vandaag een belangrijk onderzoekonderwerp \autocite{KouveliotisLysikatos2022}.
+    Om aan deze stijgende elektriciteitsvraag te voldoen, wordt het smart grid een essentiële technologie \autocite{Patel2022}. Het is een verbeterde versie van het traditionele grid dat communicatie van stroom en data in de 2 richtingen toelaat. De grote uitdaging ligt in het vinden van het evenwicht tussen productie en consumptie en vormt vandaag een belangrijk onderzoeksonderwerp \autocite{KouveliotisLysikatos2022}.
     
     We gaan dieper in op het IoT.
     
@@ -168,21 +170,23 @@
     
     Achtereenvolgend wordt er nu dieper ingegaan op de verschillende fases. In de context van deze paper die als doel heeft om een onderzoeksvoorstel te definiëren, wordt nog niet te diep ingegaan op alle uit te voeren stappen. Het is eerder de bedoeling om de richting aan te geven waarin het werk zich zal verdiepen. Een uitvoerige beschrijving van alle taken zal aan bod komen in de bachelorproef.
     
-    De eerste fase legt zich toe op het maken van een verbinding met de omvormer over het lokaal netwerk. We gebruiken een Huawei SUN2000 uitgebreid met een Smart Dongle voor wireless of fixed communicatie tussen de omvormer en het beheersysteem. De communicatie gebeurt adhv. het Modbus TCP protocol. Het doel van deze fase is om op vraag van de gebruiker een connectie te maken met de omvormer en gegevens op te vragen. Als eindresultaat van deze fase verwachten we een script dat connecteert met de omvormer adhv. Modbus TCP en de energiegevens van de omvormer uitprint.
+    De eerste fase legt zich toe op het maken van een verbinding met de omvormer over het lokaal netwerk. We gebruiken een Huawei SUN2000 uitgebreid met een Smart Dongle voor wired of wireless communicatie tussen de omvormer en het beheersysteem. De communicatie gebeurt adhv. het Modbus TCP protocol. Het doel van deze fase is om op vraag van de gebruiker een connectie te maken met de omvormer en gegevens op te vragen. Als eindresultaat van deze fase verwachten we een script dat connecteert met de omvormer adhv. Modbus TCP en de energiegevens van de omvormer uitprint.
     
-    De tweede fase bestaat uit het installeren en configuren van een centraal beheersysteem op een microcontroller. Het doel van deze fase is om te beschikken over een Raspberry Pi met daarop geïnstalleerd het openHABian besturingssysteem, een volledig geconfigureerd Linux besturingssysteem met het openHAB beheersysteem. Na afloop van deze fase moeten we in staat zijn om een verbinding te maken met de microcrontroller en over alle functionaliteit van openHAB te beschikken.
+    De tweede fase bestaat uit het installeren en configuren van een centraal beheersysteem op een microcontroller. Het doel van deze fase is om te beschikken over een Raspberry Pi met daarop geïnstalleerd het openHABian besturingssysteem, een volledig geconfigureerd Linux besturingssysteem met het open-HAB beheersysteem. Na afloop van deze fase moeten we in staat zijn om een verbinding te maken met de microcrontroller en over alle functionaliteit van open-HAB te beschikken.
     
-    In de derde fase gebruiken we het centraal beheersysteem uit fase 2 om te connecteren met de omvormer. OpenHAB beschikt over de MQTT server waarop we de omvormer registreren. De verbinding met de omvormer over Modbus TCP moet volledig geconfigureerd worden in openHAB. Eens de verbinding tot stand is gekomen, kunnen we alle gegevens en historieken bekijken van het HABPanel. Het doel van deze fase is om te verbinden met de omvormer via het centraal beheersystemen en de energiegegevens van de omvormer te raadplegen adhv. het HABPanel.
+    In de derde fase gebruiken we het centraal beheersysteem uit fase 2 om te connecteren met de omvormer. Open-HAB beschikt over de MQTT server waarop we de omvormer registreren. De verbinding met de omvormer over Modbus TCP moet volledig geconfigureerd worden in open-HAB. Eens de verbinding tot stand is gekomen, kunnen we alle gegevens en historieken bekijken van het HABPanel. Het doel van deze fase is om te verbinden met de omvormer via het centraal beheersystemen en de energiegegevens van de omvormer te raadplegen adhv. het HABPanel.
     
-    De vierde fase focust zich op het ontwikkelen van een mobiele applicatie die resources van het openHAB beheersysteem opvraagt en weergeeft. We ontwikkelen een progressive web app aan de hand van React die goed presteert op verschillende devices zoals laptop, tablet en smartphone. De gegevens waarmee gewerkt wordt, blijven beperkt tot de opgewekte stroom, die als resource beschikbaar gemaakt wordt via de openHAB REST API. Het doel van deze fase is een mobiele applicatie die resources opvraagt via de openHAB REST API. De gevraagde gegevens worden op een gebruiksvriendelijke manier aan de gebruiker getoond.
+    De vierde fase focust zich op het ontwikkelen van een mobiele applicatie die resources van het open-HAB beheersysteem opvraagt en weergeeft. We ontwikkelen een progressive web app aan de hand van React die goed presteert op verschillende devices zoals laptop, tablet en smartphone. De gegevens waarmee gewerkt wordt, blijven beperkt tot de opgewekte stroom, die als resource beschikbaar gemaakt wordt via de openHAB REST API. Het doel van deze fase is een mobiele applicatie die resources opvraagt via de open-HAB REST API. De gevraagde gegevens worden op een gebruiksvriendelijke manier aan de gebruiker getoond.
     
-    De vijfde en laatste fase tenslotte integreert alle voorgaande fases tot één werkend systeem. Het systeem betaat uit een mobiele applicatie, een microcontroller met openHAB, en een Huawei SUN2000 met Smart Dongle. Het doel is om adhv. een mobiele applicatie te verbinden met openHAB om de meeste recente data van de geregistreerde Huawei SUN2000 weer te geven.
+    De vijfde en laatste fase tenslotte integreert alle voorgaande fases tot één werkend systeem. Het systeem betaat uit een mobiele applicatie, een microcontroller met open-HAB, en een Huawei SUN2000 met Smart Dongle. Het doel is om adhv. een mobiele applicatie te verbinden met open-HAB om de meeste recente data van de geregistreerde Huawei SUN2000 weer te geven.
     
     \section{Verwachte conclusies}
     
     % TODO: (fase 6) beschrijf wat je verwacht uit je onderzoek en waarom (bv. volgens je literatuuronderzoek is softwarepakket A het meest gebruikte en denk je dat het voor deze casus ook het meest geschikt zal zijn). Natuurlijk kan je niet in de toekomst kijken en mag je geen alternatieve mogelijkheden uitsluiten. In de praktijk gebeurt het ook vaak dat een onderzoek tot verrassende resultaten leidt, dat maakt het proces nog interessanter!
     
-    \lipsum[14-18]
+    We verwachten dat de vooropgestelde architectuur van de POC efficiënt zal toelaten om de gegevens van de omvormer uit te lezen en weer te geven via een mobiele applicatie. De literatuurstudie toont aan dat verschillende systemen van het IoT volgen hetzelfde schema gebouwd zijn.
+    
+    Bovendien verwachten we dat door het overnemen van deze algemene structuur, ons systeem kan aangewend worden voor meerdere toepassingen en dus niet louter beperkt zal blijven tot deze van de POC.
     
     %------------------------------------------------------------------------------
     % Referentielijst
