--- a/paper/DePaepeBart2022RM.tex
+++ b/paper/DePaepeBart2022RM.tex
@@ -24,7 +24,7 @@
 %---------- Titel & auteur ----------------------------------------------------
 
 % TODO: (fase 2) geef werktitel van je eigen voorstel op
-\PaperTitle{Huawei omvormer SUN2000 data lokaal uitlezen}
+\PaperTitle{Connecteren van een zonnepaneleninstallatie met het Internet of Things}
 % Dit is typisch de opdracht en het vak waarvoor dit artikel geschreven is, bv.
 % ``Verslag onderzoeksproject Onderzoekstechnieken 2018-2019''
 \PaperType{Paper Research Methods: onderzoeksvoorstel}
