controle op taal

--- a/paper/DePaepeBart2022RM.tex
+++ b/paper/DePaepeBart2022RM.tex
@@ -131,7 +131,7 @@
     
     Het smart grid bestaat uit een elektrisch netwerk dat op een intelligente manier de activiteiten van vele gebruikers verbindt. Producenten en verbruikers die verbonden zijn via het smart grid zullen uiteindelijk zorgen voor een rendabele, duurzame en betrouwbare energiebron \autocite{Kassab2020} .
     
-    Het smart home transformeert een woning in een geäutomatiseerd gebouw vol met geïnstalleerde en gecontroleerde slimme objecten. De algemene architectuur van een smart home laat die objecten communiceren met een centraal beheersysteem dat kan bediend worden via een app op de smartphone \autocite{Kassab2020}. Een smart home biedt functies voor het welzijn, de veiligheid, het vermaak en het comfort van de bewoners \autocite{Choi2021}.
+    Het smart home transformeert een woning in een geäutomatiseerd gebouw vol met geïnstalleerde en gecontroleerde slimme objecten. De algemene architectuur van een smart home laat die objecten communiceren met een centraal beheersysteem dat kan bediend worden via een app op de smart-phone \autocite{Kassab2020}. Een smart home biedt functies voor het welzijn, de veiligheid, het vermaak en het comfort van de bewoners \autocite{Choi2021}.
 
     We zoeken de verschillende componenten op die deel zullen uitmaken van ons te bouwen systeem en onderzoeken de eigenschappen en concepten om ze in de praktijk te gebruiken.
     
@@ -176,7 +176,7 @@
     
     In de derde fase gebruiken we het centraal beheersysteem uit fase 2 om te connecteren met de omvormer. Open-HAB beschikt over de MQTT server waarop we de omvormer registreren. De verbinding met de omvormer over Modbus TCP moet volledig geconfigureerd worden in open-HAB. Eens de verbinding tot stand is gekomen, kunnen we alle gegevens en historieken bekijken van het HABPanel. Het doel van deze fase is om te verbinden met de omvormer via het centraal beheersystemen en de energiegegevens van de omvormer te raadplegen adhv. het HABPanel.
     
-    De vierde fase focust zich op het ontwikkelen van een mobiele applicatie die resources van het open-HAB beheersysteem opvraagt en weergeeft. We ontwikkelen een progressive web app aan de hand van React die goed presteert op verschillende devices zoals laptop, tablet en smartphone. De gegevens waarmee gewerkt wordt, blijven beperkt tot de opgewekte stroom, die als resource beschikbaar gemaakt wordt via de openHAB REST API. Het doel van deze fase is een mobiele applicatie die resources opvraagt via de open-HAB REST API. De gevraagde gegevens worden op een gebruiksvriendelijke manier aan de gebruiker getoond.
+    De vierde fase focust zich op het ontwikkelen van een mobiele applicatie die resources van het open-HAB beheersysteem opvraagt en weergeeft. We ontwikkelen een progressive web app aan de hand van React die goed presteert op verschillende devices zoals laptop, tablet en smartphone. De gegevens waarmee gewerkt wordt, blijven beperkt tot de opgewekte stroom, die als resource beschikbaar gemaakt wordt via de open-HAB REST API. Het doel van deze fase is een mobiele applicatie die resources opvraagt via de open-HAB REST API. De gevraagde gegevens worden op een gebruiksvriendelijke manier aan de gebruiker getoond.
     
     De vijfde en laatste fase tenslotte integreert alle voorgaande fases tot één werkend systeem. Het systeem betaat uit een mobiele applicatie, een microcontroller met open-HAB, en een Huawei SUN2000 met Smart Dongle. Het doel is om adhv. een mobiele applicatie te verbinden met open-HAB om de meeste recente data van de geregistreerde Huawei SUN2000 weer te geven.
     
